[fix] news tag z-index

--- a/src/sass/module/_news.sass
+++ b/src/sass/module/_news.sass
@@ -27,7 +27,7 @@
 
 .news_tag
   position: absolute
-  z-index: $z-nav
+  z-index: $z-tag
   top: 0
   right: 0
   padding-right: $space
@@ -35,7 +35,7 @@
   &:after
     content: " "
     position: absolute
-    z-index: $z-news
+    z-index: $z-tag
     top: 0
     left: 0
     margin-left: - $space * 4
